
Sun Jun  4 20:56:41 GMT 2000
(gilbertt)

Patch from monkeyiq@flashmail.com (real name?) for the option to position
windows centered under the mouse pointer.

(I changed the logic just slightly from the patch, so that windows too big
vertically are positioned so that the top is visible, instead of the other
way around).

-------------------------------------------------------------------------------

Thu Jul 20 16:14:29 PDT 2000
(KainX)

If GNOME-friendly E happens to be running in a non-GNOME environment, you
won't be able to exit E without eesh.  So now there are separate "Exit E" and
"Logout" options in the menu.

-------------------------------------------------------------------------------

Wed Jul 26 11:18:29 PDT 2000
(Mandrake)

apparently when you first open up the background settings dialog box it
clobbers the atom that says what the base background should have in it.
This is a hack, but fixes the symptom of the problem :)

-------------------------------------------------------------------------------

Wed Jul 26 11:54:23 PDT 2000
(Mandrake)

Same problem when you close the desktop background window

-------------------------------------------------------------------------------

Fri Jul 28 10:42:05 PDT 2000
(Mandrake)

the beginning of another xinerama feature "place additional windows on extra
head when current head is full"

-------------------------------------------------------------------------------

Fri Jul 28 12:31:35 PDT 2000
(Mandrake)

Now with xinerama enabled your alt-tab focus list will appear properly
centered in the current head.  I think I will add an alt-tab feature to only
focus on windows in the current head as well (this will be toggle-able)

-------------------------------------------------------------------------------

Fri Jul 28 23:31:29 CEST 2000
(Christian)

Make this compile again on non-Xinerama machines.
Hey Mandrake, have mercy with us poor singleheads :)